--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,20 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model List<Producto>
+    @{
+        ViewData["Tittle"] = "Home page";
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    }
+    @if(Model.Count() == 0) {
+        <p class="text-center">No tenemos productos para mostrar en este momento</p>
+    }else {
+        <div class="row">
+            @foreach (var producto in Model)
+            {
+                <div class="col-4 text-center">
+                    <h2>@producto.Nombre</h2>
+                    <img src="@producto.Foto" class="img-fluid"/>
+                    <p>@producto.Precio.ToString("C")</p>
+                    <p>@producto.Descripcion</p>
+                </div>
+            }
+        </div>
+    }
